# TPCuat-Grupo11

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/ApplianceShop/: AdminMenu.c  Appliance.c  Appliance.h  CMakeLists.txt  Cart.c  Cart.h  CartLine.c  CartLine.h  ClientMenu.c  Database.c  Database.h  Invoice.c  Invoice.h  InvoiceLine.c  InvoiceLine.h  Manufacturer.c  Manufacturer.h  Provider.c  Provider.h  main.c
src/ApplianceShop/docs/: ApplianceShop.mdj  info.docx
src/Blockbuster/: Admin.c  Admin.h  BlackbusterInterface.c  BlockbusterDatabase.c  BlockbusterDatabase.h  CMakeLists.txt  Client.c  Client.h  Movie.c  Movie.h  Rent.c  Rent.h  main.c  mainMenu.c
src/Blockbuster/docs/: Blockbuster.mdj  info.docx
src/CameraShop/: Accessory.c  Accessory.h  CMakeLists.txt  Camera.c  Camera.h  CameraAdminMenu.c  CameraClientMenu.c  CameraShopDatabase.c  CameraShopDatabase.h  Cart.c  Cart.h  CartLine.c  CartLine.h  Invoice.c  Invoice.h  InvoiceLine.c  InvoiceLine.h  LoginMenu.c  Manufacturer.c  Manufacturer.h  Product.c  Product.h  Provider.c  Provider.h  User.c  User.h  main.c
src/CameraShop/docs/: CameraShopUML.mdj  info.docx
src/Hotel/: CMakeLists.txt  HotelAdminMenu.c  HotelClient.c  HotelClient.h  HotelClientMenu.c  HotelDatabase.c  HotelDatabase.h  HotelInvoice.c  HotelInvoice.h  Reservation.c  Reservation.h  Room.c  Room.h  main.c
src/Hotel/docs/: Hotel.docx  HotelUML.mdj  info.docx
src/Util/: CMakeLists.txt  ScanUtil.c  ScanUtil.h
src/structs/: CMakeLists.txt  StaticList.c  StaticList.h
test/: AllTests.c  CMakeLists.txt
test/ApplianceShopTests/: AppShopTests.c  CMakeLists.txt  CartTest.c
test/BlockbusterTests/: CMakeLists.txt
test/CameraShopTests/: CMakeLists.txt  CameraShopTests.c
test/HotelTests/: CMakeLists.txt  HotelDatabaseTest.c  HotelTests.c
test/LibraryTests/: CMakeLists.txt
